--- a/css-blog/css/main.css
+++ b/css-blog/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -9,6 +11,7 @@ html {
 }
 
 body {
+  font-family: 'Roboto mono', monospace;
   font-size: 1.6rem;
   position: fixed;
   top: 0;
@@ -25,12 +28,102 @@ a {
 
 header {
   width: 100%;
-  height: 100px;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 50px 75px;
 }
 
 header .header-icons-container {
   width: 100%;
+  display: grid;
+  background-color: #47cfac;
+  display: flex;
+  justify-content: flex-end;
+}
+
+header .header-icons-container .icons {
+  width: 300px;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 50px;
+}
+
+header .header-icons-container .icons span {
+  color: white;
+}
+
+nav {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 90px;
+}
+
+nav .nav-logo-container {
+  margin-left: 50px;
+}
+
+nav .nav-logo-container img {
+  width: 220px;
+  margin-top: 10px;
+}
+
+nav .profile-link {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-right: 50px;
+}
+
+nav .profile-link a {
+  color: black;
+  border-bottom: 1px solid black;
+}
+
+.home-main {
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr;
+  height: 100%;
+  background-image: url('../assets/img/Cover.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home-main section {
+  display: grid;
+  grid-column: 2;
+  justify-items: center;
+  height: 350px;
+  margin-top: 80px;
+}
+
+.home-main-text {
+  font-size: 30px;
+  font-weight: 700px;
+  letter-spacing: 10px;
+  color: white;
+  text-align: center;
+}
+
+.home-main-button {
+  width: 100px;
   height: 50px;
+  background-color: #47cfac;
+  display: grid;
+  align-items: center;
+  border: none;
+}
+
+.home-main-button:hover {
+  cursor: pointer;
+}
+
+.home-main-button a {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.blogs-main {
+  display: grid;
 }
