--- a/api-rest/first-api/style.css
+++ b/api-rest/first-api/style.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+}
+
 body {
   box-sizing: border-box;
   display: flex;
@@ -6,6 +10,7 @@ body {
   padding: 0;
   flex-direction: column;
   align-items: center;
+  font-size: 1.6rem;
 }
 
 img {
